@@ -1,3 +1,7 @@
+05-11-2004 Qball <Qball@qballcow.nl>
+	* src/tray-icon.c:	Remove empty space of progressbar when its not
+	availible
+
 2-11-2004 Qball <Qball@qballcow.nl>
 	* src/playlist3.c:	Can't open row in plaaylist when disconnected.
 	* src/playlist3.c:	activating a row now expands it.
